--- a/pom.xml
+++ b/pom.xml
@@ -365,23 +365,21 @@
                 </configuration>
             </plugin>
             <plugin>
-   <groupId>org.codehaus.mojo</groupId>
-   <artifactId>cobertura-maven-plugin</artifactId>
-   <version>2.7</version>
-   <configuration>
-       <formats>
-           <format>html</format>
-           <format>xml</format>
-       </formats>
-       <reportSets>
-           <reportSet>
-               <reports>
-                   <report>cobertura</report>
-               </reports>
-           </reportSet>
-       </reportSets>
-   </configuration>     
-</plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <check/>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <reporting>
