--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,13 @@
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
         </dependency>
+        <dependency>
+   <groupId>com.sun</groupId>
+   <artifactId>tools</artifactId>
+   <version>1.6</version>
+   <scope>system</scope>
+   <systemPath>/usr/lib/jvm/java-11-openjdk-amd64/lib/tools.jar</systemPath>
+ </dependency>
     </dependencies>
 
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
